# cpp_skeleton

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/CppWallet/: HelloWorld.hpp  KeyPairInterface.hpp  TransactionInterface.hpp  WalletInterface.hpp
src/: main.cpp
src/CppWallet/: HelloWorld.cpp
test/: mock_KeyPair.cpp  mock_Transaction.cpp  mock_Wallet.cpp  test_FakeIt.cpp  test_HelloWorld.cpp  test_List.cpp
